litellm-rust/crates/traces/tests/snapshots/normalize__langchain_swarm.snap
---
source: crates/traces/tests/normalize.rs
expression: projected
---
[
  {
    "scope": "openinference.instrumentation.langchain",
    "name": "ChatOpenAI",
    "display_name": "ChatOpenAI",
    "root": false,
    "observation_type": "llm",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "langchain_chat_model",
    "model": "openai/gpt-6-luna",
    "input_tokens": 84,
    "output_tokens": 39,
    "call_evidence": "complete",
    "call_keys": [
      "provider_response:resp_0d40c69d6315c7af006ac075b7f53c87d0bc210f7354db1a23"
    ],
    "tool_call_id": "",
    "input_preview": "What is an agent trace?"
  },
  {
    "scope": "openinference.instrumentation.langchain",
    "name": "model",
    "display_name": "model",
    "root": false,
    "observation_type": "chain",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "langchain_create_agent",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "What is an agent trace?"
  },
  {
    "scope": "openinference.instrumentation.langchain",
    "name": "ChatOpenAI",
    "display_name": "ChatOpenAI",
    "root": false,
    "observation_type": "llm",
    "wrapper_candidate": false,
    "agent": "search_agent",
    "framework": "langchain_chat_model",
    "model": "openai/gpt-6-luna",
    "input_tokens": 40,
    "output_tokens": 230,
    "call_evidence": "complete",
    "call_keys": [
      "provider_response:chatcmpl-EUkfaRSZCNJv1e7L3z5uDhVw6Og4s"
    ],
    "tool_call_id": "",
    "input_preview": "definition of agent trace in AI agents: sequence of observations, actions, tool calls, intermediate reasoning or events during execution"
  },
  {
    "scope": "openinference.instrumentation.langchain",
    "name": "model",
    "display_name": "model",
    "root": false,
    "observation_type": "chain",
    "wrapper_candidate": false,
    "agent": "search_agent",
    "framework": "langchain_create_agent",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "definition of agent trace in AI agents: sequence of observations, actions, tool calls, intermediate reasoning or events during execution"
  },
  {
    "scope": "openinference.instrumentation.langchain",
    "name": "search_agent",
    "display_name": "search_agent",
    "root": false,
    "observation_type": "agent",
    "wrapper_candidate": false,
    "agent": "search_agent",
    "framework": "langchain_create_agent",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": ""
  },
  {
    "scope": "openinference.instrumentation.langchain",
    "name": "search",
    "display_name": "search",
    "root": false,
    "observation_type": "tool",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "langchain_create_agent",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "definition of agent trace in AI agents: sequence of observations, actions, tool calls, intermediate reasoning or events during execution"
  },
  {
    "scope": "openinference.instrumentation.langchain",
    "name": "tools",
    "display_name": "tools",
    "root": false,
    "observation_type": "chain",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "langchain_create_agent",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "[{\"name\": \"search\", \"args\": {\"query\": \"definition of agent trace in AI agents: sequence of observations, actions, tool calls, intermediate reasoning or events during execution\"}, \"id\": \"call_CzNI9KaQPxPbXJ5wkYcP6yvc\", \"type\": \"tool_call\"}]"
  },
  {
    "scope": "openinference.instrumentation.langchain",
    "name": "ChatOpenAI",
    "display_name": "ChatOpenAI",
    "root": false,
    "observation_type": "llm",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "langchain_chat_model",
    "model": "openai/gpt-6-luna",
    "input_tokens": 256,
    "output_tokens": 99,
    "call_evidence": "complete",
    "call_keys": [
      "provider_response:resp_0dd21a008515de50006ac075bdf52087d0ad227dcbee185f6e"
    ],
    "tool_call_id": "",
    "input_preview": "What is an agent trace?"
  },
  {
    "scope": "openinference.instrumentation.langchain",
    "name": "model",
    "display_name": "model",
    "root": false,
    "observation_type": "chain",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "langchain_create_agent",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "What is an agent trace?"
  },
  {
    "scope": "openinference.instrumentation.langchain",
    "name": "ChatOpenAI",
    "display_name": "ChatOpenAI",
    "root": false,
    "observation_type": "llm",
    "wrapper_candidate": false,
    "agent": "writer_agent",
    "framework": "langchain_chat_model",
    "model": "openai/gpt-6-luna",
    "input_tokens": 101,
    "output_tokens": 84,
    "call_evidence": "complete",
    "call_keys": [
      "provider_response:chatcmpl-EUkfgM97jBNv5Z7dlQ3xFjUhew5R5"
    ],
    "tool_call_id": "",
    "input_preview": "An agent trace is a chronological record of an AI agent’s execution: observations, actions, tool calls and results, and relevant events or state changes. Example flow: user request → observation → tool call → result → next action → final re"
  },
  {
    "scope": "openinference.instrumentation.langchain",
    "name": "model",
    "display_name": "model",
    "root": false,
    "observation_type": "chain",
    "wrapper_candidate": false,
    "agent": "writer_agent",
    "framework": "langchain_create_agent",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "An agent trace is a chronological record of an AI agent’s execution: observations, actions, tool calls and results, and relevant events or state changes. Example flow: user request → observation → tool call → result → next action → final re"
  },
  {
    "scope": "openinference.instrumentation.langchain",
    "name": "writer_agent",
    "display_name": "writer_agent",
    "root": false,
    "observation_type": "agent",
    "wrapper_candidate": false,
    "agent": "writer_agent",
    "framework": "langchain_create_agent",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": ""
  },
  {
    "scope": "openinference.instrumentation.langchain",
    "name": "write",
    "display_name": "write",
    "root": false,
    "observation_type": "tool",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "langchain_create_agent",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "An agent trace is a chronological record of an AI agent’s execution: observations, actions, tool calls and results, and relevant events or state changes. Example flow: user request → observation → tool call → result → next action → final re"
  },
  {
    "scope": "openinference.instrumentation.langchain",
    "name": "tools",
    "display_name": "tools",
    "root": false,
    "observation_type": "chain",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "langchain_create_agent",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "[{\"name\": \"write\", \"args\": {\"facts\": \"An agent trace is a chronological record of an AI agent’s execution: observations, actions, tool calls and results, and relevant events or state changes. Example flow: user request → observation → tool "
  },
  {
    "scope": "openinference.instrumentation.langchain",
    "name": "ChatOpenAI",
    "display_name": "ChatOpenAI",
    "root": false,
    "observation_type": "llm",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "langchain_chat_model",
    "model": "openai/gpt-6-luna",
    "input_tokens": 406,
    "output_tokens": 44,
    "call_evidence": "complete",
    "call_keys": [
      "provider_response:resp_0992caffce9997f5006ac075c2562487d0bc41e2424422f5c9"
    ],
    "tool_call_id": "",
    "input_preview": "What is an agent trace?"
  },
  {
    "scope": "openinference.instrumentation.langchain",
    "name": "model",
    "display_name": "model",
    "root": false,
    "observation_type": "chain",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "langchain_create_agent",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "What is an agent trace?"
  },
  {
    "scope": "openinference.instrumentation.langchain",
    "name": "research_agent",
    "display_name": "research_agent",
    "root": true,
    "observation_type": "agent",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "langchain_create_agent",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": ""
  }
]
