litellm-rust/crates/traces/tests/snapshots/normalize__langgraph_swarm.snap
---
source: crates/traces/tests/normalize.rs
expression: projected
---
[
  {
    "scope": "openinference.instrumentation.langchain",
    "name": "ChatOpenAI",
    "display_name": "ChatOpenAI",
    "root": false,
    "observation_type": "llm",
    "wrapper_candidate": false,
    "agent": "",
    "framework": "langchain_chat_model",
    "model": "openai/gpt-6-luna",
    "input_tokens": 25,
    "output_tokens": 196,
    "call_evidence": "complete",
    "call_keys": [
      "provider_response:chatcmpl-EUkg6qZ2FgQj2DBLleVWPGoYyxrge"
    ],
    "tool_call_id": "",
    "input_preview": "What is an agent trace?"
  },
  {
    "scope": "openinference.instrumentation.langchain",
    "name": "call_model",
    "display_name": "call_model",
    "root": false,
    "observation_type": "chain",
    "wrapper_candidate": false,
    "agent": "",
    "framework": "langgraph",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "What is an agent trace?"
  },
  {
    "scope": "openinference.instrumentation.langchain",
    "name": "search_agent",
    "display_name": "search_agent",
    "root": false,
    "observation_type": "agent",
    "wrapper_candidate": false,
    "agent": "search_agent",
    "framework": "langgraph",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "What is an agent trace?"
  },
  {
    "scope": "openinference.instrumentation.langchain",
    "name": "search",
    "display_name": "search",
    "root": false,
    "observation_type": "chain",
    "wrapper_candidate": false,
    "agent": "",
    "framework": "langgraph",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "What is an agent trace?"
  },
  {
    "scope": "openinference.instrumentation.langchain",
    "name": "ChatOpenAI",
    "display_name": "ChatOpenAI",
    "root": false,
    "observation_type": "llm",
    "wrapper_candidate": false,
    "agent": "",
    "framework": "langchain_chat_model",
    "model": "openai/gpt-6-luna",
    "input_tokens": 144,
    "output_tokens": 98,
    "call_evidence": "complete",
    "call_keys": [
      "provider_response:chatcmpl-EUkg96aMjurhZd7CGsLjGUU6mKDGo"
    ],
    "tool_call_id": "",
    "input_preview": "What is an agent trace?"
  },
  {
    "scope": "openinference.instrumentation.langchain",
    "name": "call_model",
    "display_name": "call_model",
    "root": false,
    "observation_type": "chain",
    "wrapper_candidate": false,
    "agent": "",
    "framework": "langgraph",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "What is an agent trace?"
  },
  {
    "scope": "openinference.instrumentation.langchain",
    "name": "writer_agent",
    "display_name": "writer_agent",
    "root": false,
    "observation_type": "agent",
    "wrapper_candidate": false,
    "agent": "writer_agent",
    "framework": "langgraph",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "What is an agent trace?"
  },
  {
    "scope": "openinference.instrumentation.langchain",
    "name": "write",
    "display_name": "write",
    "root": false,
    "observation_type": "chain",
    "wrapper_candidate": false,
    "agent": "",
    "framework": "langgraph",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "What is an agent trace?"
  },
  {
    "scope": "openinference.instrumentation.langchain",
    "name": "research_agent",
    "display_name": "research_agent",
    "root": true,
    "observation_type": "agent",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "langgraph",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": ""
  }
]
