litellm-rust/crates/traces/tests/snapshots/normalize__llamaindex_simple.snap
---
source: crates/traces/tests/normalize.rs
expression: projected
---
[
  {
    "scope": "openinference.instrumentation.llama_index",
    "name": "BaseWorkflowAgent.init_run",
    "display_name": "BaseWorkflowAgent.init_run",
    "root": false,
    "observation_type": "chain",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "llama-index",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "{\"ctx\": \"<workflows.context.context.Context object at 0x10e1d4690>\", \"ev\": \"AgentWorkflowStartEvent()\"}"
  },
  {
    "scope": "openinference.instrumentation.llama_index",
    "name": "BaseWorkflowAgent.setup_agent",
    "display_name": "BaseWorkflowAgent.setup_agent",
    "root": false,
    "observation_type": "chain",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "llama-index",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "{\"ctx\": \"<workflows.context.context.Context object at 0x10deb5f30>\", \"ev\": \"AgentInput(input=[ChatMessage(role=<MessageRole.USER: 'user'>, additional_kwargs={}, blocks=[TextBlock(block_type='text', text='What is an agent trace?')])], curren"
  },
  {
    "scope": "openinference.instrumentation.llama_index",
    "name": "OpenAILike._prepare_chat_with_tools",
    "display_name": "OpenAILike._prepare_chat_with_tools",
    "root": false,
    "observation_type": "chain",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "llama-index",
    "model": "openai/gpt-6-luna",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "{\"tools\": [], \"user_msg\": null, \"chat_history\": [\"ChatMessage(role=<MessageRole.USER: 'user'>, additional_kwargs={}, blocks=[TextBlock(block_type='text', text='What is an agent trace?')])\"], \"verbose\": false, \"allow_parallel_tool_calls\": tr"
  },
  {
    "scope": "openinference.instrumentation.llama_index",
    "name": "OpenAILike.achat",
    "display_name": "OpenAILike.achat",
    "root": false,
    "observation_type": "llm",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "llama-index",
    "model": "openai/gpt-6-luna",
    "input_tokens": 12,
    "output_tokens": 206,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "What is an agent trace?"
  },
  {
    "scope": "openinference.instrumentation.llama_index",
    "name": "OpenAILike.achat",
    "display_name": "OpenAILike.achat",
    "root": false,
    "observation_type": "llm",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "llama-index",
    "model": "openai/gpt-6-luna",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "{\"messages\": [\"ChatMessage(role=<MessageRole.USER: 'user'>, additional_kwargs={}, blocks=[TextBlock(block_type='text', text='What is an agent trace?')])\"], \"kwargs\": {\"tools\": null, \"tool_choice\": null}}"
  },
  {
    "scope": "openinference.instrumentation.llama_index",
    "name": "BaseWorkflowAgent.run_agent_step",
    "display_name": "BaseWorkflowAgent.run_agent_step",
    "root": false,
    "observation_type": "agent",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "llama-index",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "{\"ctx\": \"<workflows.context.context.Context object at 0x10deb62c0>\", \"ev\": \"AgentSetup(input=[ChatMessage(role=<MessageRole.USER: 'user'>, additional_kwargs={}, blocks=[TextBlock(block_type='text', text='What is an agent trace?')])], curren"
  },
  {
    "scope": "openinference.instrumentation.llama_index",
    "name": "BaseWorkflowAgent.parse_agent_output",
    "display_name": "BaseWorkflowAgent.parse_agent_output",
    "root": false,
    "observation_type": "chain",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "llama-index",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "{\"ctx\": \"<workflows.context.context.Context object at 0x10f52da30>\", \"ev\": \"AgentOutput(response=ChatMessage(role=<MessageRole.ASSISTANT: 'assistant'>, additional_kwargs={}, blocks=[TextBlock(block_type='text', text='An **agent trace** is a"
  },
  {
    "scope": "openinference.instrumentation.llama_index",
    "name": "FunctionAgent.run",
    "display_name": "FunctionAgent.run",
    "root": true,
    "observation_type": "agent",
    "wrapper_candidate": true,
    "agent": "research_agent",
    "framework": "llama-index",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "{\"init_state\": {\"is_running\": false, \"config\": {\"steps\": {\"aggregate_tool_results\": {\"accepted_events\": [\"<ToolCallResult(*, tool_name: str, tool_kwargs: dict, tool_id: str, tool_output: llama_index.core.tools.types.ToolOutput, return_direc"
  }
]
